--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #023047;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 100vw;
+  height: 100vh;
+  margin: -10px 0px -10px -20px;
+}
+
+
+h1 {
+  color: #b0f5ed;
+  margin-top: 60px;
+  font-size: 2.5rem;
+}
+
+.validate-container {
+  width: 100%;
+  height: 100%;
+  padding: 50px;
+}
+
+.input-field {
+  padding: 20px 90px;
+  margin-right: 5px;
+}
+
+.input-field::placeholder {
+  font-size: 1.2rem;
+}
+.input-btn {
+  padding: 13px 25px;
+  border-radius: 10px;
+  border: none;
+  background-color: #219ebc;
   color: white;
+  font-weight: bold;
+  font-size: 1.5rem;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.validate-btn {
+  text-align: center;
+  align-items: center;
+  margin-top: 30px;
+  border-radius: 10px;
+  padding: 10px 75px;
+  border: none;
+  background-color: #fb8500;
+  color: white;
+  font-weight: bold;
+  font-size: 1.5rem;
+  cursor: pointer;
+  
 }
